--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:42:38.885962Z",
-     "start_time": "2022-12-03T00:42:38.880606Z"
+     "end_time": "2022-12-03T05:38:04.094610Z",
+     "start_time": "2022-12-03T05:38:04.089261Z"
     }
    },
    "outputs": [],
@@ -24,11 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:42:40.774246Z",
-     "start_time": "2022-12-03T00:42:39.664008Z"
+     "end_time": "2022-12-03T05:38:04.864139Z",
+     "start_time": "2022-12-03T05:38:04.349942Z"
     }
    },
    "outputs": [],
@@ -48,11 +48,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:42:42.439096Z",
-     "start_time": "2022-12-03T00:42:42.425188Z"
+     "end_time": "2022-12-03T05:38:04.932223Z",
+     "start_time": "2022-12-03T05:38:04.926798Z"
     }
    },
    "outputs": [],
@@ -87,11 +87,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:43:34.444483Z",
-     "start_time": "2022-12-03T00:43:33.194594Z"
+     "end_time": "2022-12-03T05:38:06.764950Z",
+     "start_time": "2022-12-03T05:38:05.468004Z"
     }
    },
    "outputs": [
@@ -304,7 +304,7 @@
        "[5 rows x 86 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,11 +351,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:43:40.710139Z",
-     "start_time": "2022-12-03T00:43:40.614641Z"
+     "end_time": "2022-12-03T05:38:08.644522Z",
+     "start_time": "2022-12-03T05:38:08.546653Z"
     }
    },
    "outputs": [],
@@ -370,11 +370,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:43:45.816998Z",
-     "start_time": "2022-12-03T00:43:45.577592Z"
+     "end_time": "2022-12-03T05:38:09.613945Z",
+     "start_time": "2022-12-03T05:38:09.376158Z"
     }
    },
    "outputs": [
@@ -684,7 +684,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,11 +695,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:44:15.382065Z",
-     "start_time": "2022-12-03T00:44:15.369410Z"
+     "end_time": "2022-12-03T05:38:10.320989Z",
+     "start_time": "2022-12-03T05:38:10.309874Z"
     }
    },
    "outputs": [
@@ -720,7 +720,7 @@
        "Name: loan_status, Length: 68817, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,11 +731,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:44:33.747203Z",
-     "start_time": "2022-12-03T00:44:33.728489Z"
+     "end_time": "2022-12-03T05:38:10.849962Z",
+     "start_time": "2022-12-03T05:38:10.834668Z"
     }
    },
    "outputs": [
@@ -747,7 +747,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,11 +759,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:44:44.143813Z",
-     "start_time": "2022-12-03T00:44:43.540629Z"
+     "end_time": "2022-12-03T05:38:11.604957Z",
+     "start_time": "2022-12-03T05:38:11.430174Z"
     }
    },
    "outputs": [
@@ -773,7 +773,7 @@
        "Counter({'low_risk': 51352, 'high_risk': 260})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,11 +810,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:45:22.051730Z",
-     "start_time": "2022-12-03T00:45:16.158404Z"
+     "end_time": "2022-12-03T05:38:14.598670Z",
+     "start_time": "2022-12-03T05:38:13.754461Z"
     }
    },
    "outputs": [
@@ -824,7 +824,7 @@
        "Counter({'low_risk': 51352, 'high_risk': 51352})"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,11 +839,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:45:41.800946Z",
-     "start_time": "2022-12-03T00:45:40.812492Z"
+     "end_time": "2022-12-03T05:38:15.495015Z",
+     "start_time": "2022-12-03T05:38:14.600098Z"
     }
    },
    "outputs": [
@@ -853,7 +853,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,11 +867,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:46:14.532516Z",
-     "start_time": "2022-12-03T00:46:14.442688Z"
+     "end_time": "2022-12-03T05:38:19.465506Z",
+     "start_time": "2022-12-03T05:38:19.376593Z"
     }
    },
    "outputs": [
@@ -881,7 +881,7 @@
        "0.6456130066757718"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,22 +895,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:46:39.429778Z",
-     "start_time": "2022-12-03T00:46:39.348192Z"
+     "end_time": "2022-12-03T05:38:35.757947Z",
+     "start_time": "2022-12-03T05:38:35.672628Z"
     }
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted 0</th>\n",
+       "      <th>Predicted 1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual 0</th>\n",
+       "      <td>53</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual 1</th>\n",
+       "      <td>5443</td>\n",
+       "      <td>11675</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[   53,    34],\n",
-       "       [ 5443, 11675]])"
+       "          Predicted 0  Predicted 1\n",
+       "Actual 0           53           34\n",
+       "Actual 1         5443        11675"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +957,11 @@
    "source": [
     "# Display the confusion matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "confusion_matrix(y_test, y_pred)"
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual 0\", \"Actual 1\"], columns=[\"Predicted 0\", \"Predicted 1\"]\n",
+    ")\n",
+    "cm_df"
    ]
   },
   {
