Second README draft

--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -966,11 +966,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:46:56.342205Z",
-     "start_time": "2022-12-03T00:46:56.036159Z"
+     "end_time": "2022-12-03T05:52:58.522677Z",
+     "start_time": "2022-12-03T05:52:58.215566Z"
     }
    },
    "outputs": [
@@ -1003,11 +1003,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:47:35.039339Z",
-     "start_time": "2022-12-03T00:47:34.829152Z"
+     "end_time": "2022-12-03T05:53:00.385857Z",
+     "start_time": "2022-12-03T05:53:00.065146Z"
     }
    },
    "outputs": [
@@ -1017,7 +1017,7 @@
        "Counter({'low_risk': 51352, 'high_risk': 51352})"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,11 +1032,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:47:45.765352Z",
-     "start_time": "2022-12-03T00:47:44.781732Z"
+     "end_time": "2022-12-03T05:53:01.686706Z",
+     "start_time": "2022-12-03T05:53:00.653656Z"
     }
    },
    "outputs": [
@@ -1046,7 +1046,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,11 +1059,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:47:59.815234Z",
-     "start_time": "2022-12-03T00:47:59.723977Z"
+     "end_time": "2022-12-03T05:53:02.954279Z",
+     "start_time": "2022-12-03T05:53:02.863215Z"
     }
    },
    "outputs": [
@@ -1073,7 +1073,7 @@
        "0.6234433606890912"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,38 +1086,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:48:11.472117Z",
-     "start_time": "2022-12-03T00:48:11.396065Z"
+     "end_time": "2022-12-03T05:53:14.032783Z",
+     "start_time": "2022-12-03T05:53:13.945612Z"
     }
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted 0</th>\n",
+       "      <th>Predicted 1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual 0</th>\n",
+       "      <td>53</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual 1</th>\n",
+       "      <td>6202</td>\n",
+       "      <td>10916</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[   53,    34],\n",
-       "       [ 6202, 10916]])"
+       "          Predicted 0  Predicted 1\n",
+       "Actual 0           53           34\n",
+       "Actual 1         6202        10916"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "confusion_matrix(y_test, y_pred)"
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual 0\", \"Actual 1\"], columns=[\"Predicted 0\", \"Predicted 1\"]\n",
+    ")\n",
+    "cm_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:48:25.291579Z",
-     "start_time": "2022-12-03T00:48:24.988920Z"
+     "end_time": "2022-12-03T05:54:14.729729Z",
+     "start_time": "2022-12-03T05:54:14.427696Z"
     }
    },
    "outputs": [
@@ -1159,11 +1202,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:49:36.117731Z",
-     "start_time": "2022-12-03T00:48:50.080531Z"
+     "end_time": "2022-12-03T05:54:36.313975Z",
+     "start_time": "2022-12-03T05:54:16.467831Z"
     }
    },
    "outputs": [
@@ -1173,7 +1216,7 @@
        "Counter({'high_risk': 260, 'low_risk': 260})"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,11 +1231,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:49:48.314848Z",
-     "start_time": "2022-12-03T00:49:48.261497Z"
+     "end_time": "2022-12-03T05:54:36.385557Z",
+     "start_time": "2022-12-03T05:54:36.315693Z"
     }
    },
    "outputs": [
@@ -1202,7 +1245,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,21 +1258,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:49:58.426784Z",
-     "start_time": "2022-12-03T00:49:58.336193Z"
+     "end_time": "2022-12-03T05:54:36.445676Z",
+     "start_time": "2022-12-03T05:54:36.387324Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5193132052971061"
+       "0.5221978477988486"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,38 +1285,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:50:08.982579Z",
-     "start_time": "2022-12-03T00:50:08.900744Z"
+     "end_time": "2022-12-03T05:54:36.499057Z",
+     "start_time": "2022-12-03T05:54:36.447941Z"
     }
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted 0</th>\n",
+       "      <th>Predicted 1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual 0</th>\n",
+       "      <td>54</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual 1</th>\n",
+       "      <td>9865</td>\n",
+       "      <td>7253</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[  53,   34],\n",
-       "       [9767, 7351]])"
+       "          Predicted 0  Predicted 1\n",
+       "Actual 0           54           33\n",
+       "Actual 1         9865         7253"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "confusion_matrix(y_test, y_pred)"
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual 0\", \"Actual 1\"], columns=[\"Predicted 0\", \"Predicted 1\"]\n",
+    ")\n",
+    "cm_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:50:18.914733Z",
-     "start_time": "2022-12-03T00:50:18.608512Z"
+     "end_time": "2022-12-03T05:55:28.123174Z",
+     "start_time": "2022-12-03T05:55:27.819209Z"
     }
    },
    "outputs": [
@@ -1283,10 +1369,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.61      0.43      0.01      0.51      0.27        87\n",
-      "   low_risk       1.00      0.43      0.61      0.60      0.51      0.26     17118\n",
+      "  high_risk       0.01      0.62      0.42      0.01      0.51      0.27        87\n",
+      "   low_risk       1.00      0.42      0.62      0.59      0.51      0.26     17118\n",
       "\n",
-      "avg / total       0.99      0.43      0.61      0.60      0.51      0.26     17205\n",
+      "avg / total       0.99      0.42      0.62      0.59      0.51      0.26     17205\n",
       "\n"
      ]
     }
@@ -1315,11 +1401,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:55:39.304588Z",
-     "start_time": "2022-12-03T00:50:36.872872Z"
+     "end_time": "2022-12-03T06:00:30.910009Z",
+     "start_time": "2022-12-03T05:55:31.843647Z"
     }
    },
    "outputs": [
@@ -1329,7 +1415,7 @@
        "Counter({'high_risk': 68458, 'low_risk': 62022})"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,11 +1430,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:55:53.995929Z",
-     "start_time": "2022-12-03T00:55:52.823012Z"
+     "end_time": "2022-12-03T06:00:32.071247Z",
+     "start_time": "2022-12-03T06:00:30.913674Z"
     }
    },
    "outputs": [
@@ -1358,7 +1444,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1371,11 +1457,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:56:04.215106Z",
-     "start_time": "2022-12-03T00:56:04.123121Z"
+     "end_time": "2022-12-03T06:00:32.132857Z",
+     "start_time": "2022-12-03T06:00:32.072234Z"
     }
    },
    "outputs": [
@@ -1385,7 +1471,7 @@
        "0.6531287896185101"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,38 +1484,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:56:16.648701Z",
-     "start_time": "2022-12-03T00:56:16.566438Z"
+     "end_time": "2022-12-03T06:00:32.186187Z",
+     "start_time": "2022-12-03T06:00:32.134613Z"
     }
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted 0</th>\n",
+       "      <th>Predicted 1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual 0</th>\n",
+       "      <td>60</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual 1</th>\n",
+       "      <td>6563</td>\n",
+       "      <td>10555</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[   60,    27],\n",
-       "       [ 6563, 10555]])"
+       "          Predicted 0  Predicted 1\n",
+       "Actual 0           60           27\n",
+       "Actual 1         6563        10555"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "confusion_matrix(y_test, y_pred)"
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual 0\", \"Actual 1\"], columns=[\"Predicted 0\", \"Predicted 1\"]\n",
+    ")\n",
+    "cm_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-03T00:56:28.936360Z",
-     "start_time": "2022-12-03T00:56:28.626308Z"
+     "end_time": "2022-12-03T06:00:32.464406Z",
+     "start_time": "2022-12-03T06:00:32.187268Z"
     }
    },
    "outputs": [
